# ArtHistoryNavigator

./: .replit  Pasted--Environment-updated-Reloading-shell-Serving-Flask-app-main-Debug-mode-off-INFO-werkze-1726843003794.txt  Pasted--Environment-updated-Reloading-shell-Serving-Flask-app-main-Debug-mode-off-INFO-werkze-1726843081616.txt  Pasted--Environment-updated-Reloading-shell-Serving-Flask-app-main-Debug-mode-off-INFO-werkze-1726843239781.txt  Pasted--Serving-Flask-app-main-Debug-mode-off-INFO-werkzeug-WARNING-This-is-a-development-server--1726843788701.txt  Pasted--Serving-Flask-app-main-Debug-mode-off-INFO-werkzeug-WARNING-This-is-a-development-server--1726844618881.txt  Pasted-from-flask-import-Flask-render-template-request-jsonify-redirect-url-for-flash-from-flask-logi-1726843274354.txt  README.md  main.py  models.py  pyproject.toml  recommendation_system.py
static/css/: styles.css
static/js/: app.js
templates/: 404.html  500.html  base.html  collections.html  create_collection.html  create_learning_path.html  details.html  index.html  login.html  profile.html  register.html  search.html  view_collection.html  view_learning_path.html  visualize.html
utils/: api_helpers.py
